Updated projects and resume pages

--- a/projects.html
+++ b/projects.html
@@ -35,9 +35,11 @@
                     <datalist id="projectsDL">
                         <option value="Code Names - ACM">
                         <option value="Plateful">
+                        <option value="Second First Date">
                         <option value="TaskRPG">
                         <option value="The Lost Royal Cat">
                         <option value="Travel Serenity">
+                        <option value="Welcome Back, User">
                     </datalist>
                     <button id="submitBtn" type="submit">Submit</button>
                 </form>
