--- a/resume.html
+++ b/resume.html
@@ -29,8 +29,8 @@
 
     <main id="resumepageMain">
         <section id="resumepageSection">
-            <iframe src="./media/Julie_Nguyen_Resume.pdf" width="800px" height="1000px">
-                This browser does not support PDFs. Please download the PDF to view it: <a href="./media/Julie_Nguyen_Resume.pdf">Download PDF</a>.
+            <iframe src="./media/Julie Nguyen - Resume.pdf" width="800px" height="1000px">
+                This browser does not support PDFs. Please download the PDF to view it: <a href="./media/Julie Nguyen - Resume.pdf">Download PDF</a>.
             </iframe>
         </section>
     </main>
