Updated about page

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             
             <article>
                 <h3>Background:</h3>
-                <p>I am currently a 3rd year computer science student studying at the University of California, San Diego. <br /> <br />
+                <p>I am currently a 4th year computer science student studying at the University of California, San Diego. <br /> <br />
                     Additionally, I am a first-generation college student interested in connecting with others in the computer science field, and I'm seeking opportunities both in industry and academia.</p>
             </article>
             
@@ -51,9 +51,11 @@
                     <li>C#</li>
                     <li>C++</li>
                     <li>Git Commands</li>
+                    <li>Haskell</li>
                     <li>HTML</li>
                     <li>Java</li>
                     <li>JavaScript</li>
+                    <li>Lua</li>
                     <li>Python</li>
                 </ul>
             </article>
@@ -80,6 +82,14 @@
                     <tr>
                         <td>React</td>
                         <td>Unity Game Engine</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Figma</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Godot</td>
                     </tr>
                 </table>
             </article>
