Updated workExp page

--- a/workExp.html
+++ b/workExp.html
@@ -32,6 +32,37 @@
             <h2>WORK EXPERIENCE</h2>
             <div class="workexpItem">
                 <hgroup>
+                    <h3>Instructional Assistant</h3>
+                    <h4>UCSD Computer Science and Engineering Department</h4>
+                    <p>Sep 2025 - Present · 2 mos</p>
+                    <address>
+                        La Jolla,<br /> 
+                        California,<br />
+                        United States · On-site
+                    </address>
+                </hgroup>
+                <p>Course: CSE 134B - Web Client Languages. Teaching staff for Thomas Powell. <br /> <br />
+                    Act as a key communication bridge between the professor and 100+ students, clarifying assignment details, deadlines, and course logistics via Slack while also holding weekly office hours to provide one-on-one and small-group tutoring.
+                </p>
+            </div>
+            <hr>
+            <div class="workexpItem">
+                <hgroup>
+                    <h3>Coding Instructor</h3>
+                    <h4>Coding4Youth Inc</h4>
+                    <p>Jun 2025 - Present · 5 mos</p>
+                    <address>
+                        United States · Remote
+                    </address>
+                </hgroup>
+                <p>Design and deliver engaging coding lessons in Python, Lua, and Scratch for K-12 students, fostering problem-solving skills and computational thinking. <br /> <br />
+                    Tailor lessons to individual student's learning styles to ensure comprehension in class sizes of 1-6 students. <br /> <br />
+                    Improve students' coding proficiency through personalized feedback and project-based learning.
+                </p>
+            </div>
+            <hr>
+            <div class="workexpItem">
+                <hgroup>
                     <h3>Laboratory Aide</h3>
                     <h4>Loma Linda University</h4>
                     <p>Jun 2022 - Aug 2022 · 3 mos</p>
